objects/enxootr__Test_Result__c.object
<CustomObject>
    <fields>
        <fullName>enxootr__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enxootr__Method__c</fullName>
        <label>Method</label>
        <referenceTo>enxootr__Method__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>enxootr__Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>enxootr__Run_Time_Duration__c</fullName>
        <description>How long it took to run this test method</description>
        <inlineHelpText>How long it took to run this test method</inlineHelpText>
        <label>Run Time Duration[s]</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Stacktrace__c</fullName>
        <label>Stacktrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enxootr__Test_Run__c</fullName>
        <label>Test Run</label>
        <referenceTo>enxootr__Test_Run__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Result</label>
    <listViews>
        <fullName>enxootr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>